Added all needed html pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="recipes.html">My Recipes</a></li>
           <li><a href="discover.html">Discover</a></li>
-          <li><a href="about.html">About</a></li>
         </menu>
       </nav>
       <hr />
@@ -25,7 +24,8 @@
 
     <main>
       <h1>Welcome to ShareABite</h1>
-      <h3>Where recipes bring people together</h3>
+      <img src="logo.png" style="width:150px; height:auto;">
+      <h3>Where recipes bring people together!</h3>
       <form method="get" action="play.html">
         <div>
           <span>Email</span>
