Div for ability to add new recipe or search in recipe book

--- a/recipes.html
+++ b/recipes.html
@@ -23,7 +23,18 @@
 
     <main>
       <h1>My Recipes</h1>
- 
+      <p>Store all of your recipes here</p>
+
+      <div>
+        <!-- Smaller nav bar to add new recipe or search for recipe -->
+        <button>Add New Recipe</button>
+        <form aria-label="Recipe search">
+          <input id="q" name="q" type="search" placeholder="Search by Recipe Name">
+          <button type="submit">Search</button>
+        </form>
+      </div>
+
+
     </main>
 
     <footer>
