--- a/discover.html
+++ b/discover.html
@@ -24,7 +24,46 @@
 
     <main>
       <h1>Discover</h1>
+      <h3>Explore new recipes from people on our platform</h3>
 
+      <!-- Smaller nav bar to add new recipe or search for recipe -->
+      <header>
+        <p><a href="randomRecipe.html" class="button">Random Recipe</a></p>
+        <p><a href="savedRecipes.html" class="button">Saved</a></p>
+      </header>
+
+      <!-- This section is a placeholder for the WebSocket data -->
+       <!-- Real time recipes shared will appear here -->
+      <section>
+        <ul>
+          <!-- Want to make a React card component to cleanly dispay recipe info -->
+          <li>
+            <img src="Enchilada.jpeg">
+            <div>
+              <h4>Chicken Enchilada</h4>
+              <p>35 minutes</p>
+              <p>Difficulty: Easy</p>
+              <p>User: : OnoFood18</p>
+              <a href="" class="button">More</a>
+              <a href="" class="button">Save Recipe</a>
+            </div>
+          </li>
+
+          <br>
+
+          <li>
+            <img src="marrymechicken.jpg" style="width:150px; height:auto;">
+            <div>
+              <h4>Marry Me Chicken with Pasta</h4>
+              <p>25 minutes</p>
+              <p>Difficulty: Easy</p>
+              <p>User: : Foodi273</p>
+              <a href="" class="button">More</a>
+              <a href="" class="button">Save Recipe</a>
+            </div>
+          </li>
+
+      </section>
     </main>
 
     <footer>
