Made changes throughout html pages to double check requirements were met

--- a/addRecipe.html
+++ b/addRecipe.html
@@ -26,6 +26,7 @@
 
       <!-- Form to add recipes to recipebook -->
        <!-- May want to add or limit additional fields -->
+        <!-- Use a form similar to this for editing a recipe (populate this form with information from DB) -->
       <form>
         <fieldset>
           <legend>Basics</legend>
