--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>ShareABite<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
+       <!-- Links between pages as necessary -->
       <nav>
         <menu>
           <li><a href="index.html">Home</a></li>
@@ -24,8 +25,11 @@
 
     <main>
       <h1>Welcome to ShareABite</h1>
+      <!-- Example of the use of images throughout application -->
       <img src="logo.png" style="width:150px; height:auto;">
       <h3>Where recipes bring people together!</h3>
+
+      <!-- Login placeholder, including user name display -->
       <form method="get" action="play.html">
         <div>
           <span>Email</span>
