--- a/randomRecipe.html
+++ b/randomRecipe.html
@@ -22,7 +22,13 @@
     </header>
 
     <main>
-      <h1>Saved Recipes</h1>
+      <h1>Random Recipe Generator</h1>
+
+      <!-- Place holder for API that will randomly return a recipe to the user -->
+      <section>
+        <p>Discover completely random recipes with our random recipe generator!</p>
+        <button>Random Recipe</button>
+      </section>
 
     </main>
 
