--- a/recipes.html
+++ b/recipes.html
@@ -51,6 +51,8 @@
               <p>35 minutes</p>
               <p>Difficulty: Easy</p>
               <a href="viewRecipe.html">More</a>
+              <a href="">Edit</a>
+              <a href="">Share</a>
             </div>
           </li>
 
@@ -61,12 +63,13 @@
               <p>20 minutes</p>
               <p>Difficulty: Easy</p>
               <a href="">More</a>
+              <a href="">Edit</a>
+              <a href="">Share</a>
             </div>
           </li>
 
         </ul>
       </section>
-
 
     </main>
 
