--- a/savedRecipes.html
+++ b/savedRecipes.html
@@ -25,6 +25,19 @@
     <main>
       <h1>Saved Recipes</h1>
 
+      <div>
+        <li>
+            <img src="Enchilada.jpeg">
+            <div>
+              <h4>Chicken Enchilada</h4>
+              <p>35 minutes</p>
+              <p>Difficulty: Easy</p>
+              <p>User: : OnoFood18</p>
+              <a href="" class="button">More</a>
+              <a href="" class="button">Save Recipe</a>
+            </div>
+          </li>
+      </div>
     </main>
 
     <footer>
