Final touches to html pages and updated ReadMe.md to reflect all changes

--- a/discover.html
+++ b/discover.html
@@ -26,7 +26,7 @@
       <h1>Discover</h1>
       <h3>Explore new recipes from people on our platform</h3>
 
-      <!-- Smaller nav bar to add new recipe or search for recipe -->
+      <!-- Smaller nav bar to be givena random recipe or view saved shared recipes -->
       <header>
         <p><a href="randomRecipe.html" class="button">Random Recipe</a></p>
         <p><a href="savedRecipes.html" class="button">Saved</a></p>
