--- a/randomRecipe.html
+++ b/randomRecipe.html
@@ -24,7 +24,7 @@
     <main>
       <h1>Random Recipe Generator</h1>
 
-      <!-- Place holder for API that will randomly return a recipe to the user -->
+      <!-- Place holder for 3rd party service API that will randomly return a recipe to the user -->
       <section>
         <p>Discover completely random recipes with our random recipe generator!</p>
         <button>Random Recipe</button>
