--- a/savedRecipes.html
+++ b/savedRecipes.html
@@ -25,6 +25,8 @@
     <main>
       <h1>Saved Recipes</h1>
 
+      <!-- Another location that needs to be connected to the database -->
+
       <div>
         <li>
             <img src="Enchilada.jpeg">
