Changes to discover and saved recipes

--- a/discover.html
+++ b/discover.html
@@ -43,7 +43,7 @@
               <h4>Chicken Enchilada</h4>
               <p>35 minutes</p>
               <p>Difficulty: Easy</p>
-              <p>User: : OnoFood18</p>
+              <p>User: OnoFood18</p>
               <a href="" class="button">More</a>
               <a href="" class="button">Save Recipe</a>
             </div>
@@ -57,7 +57,7 @@
               <h4>Marry Me Chicken with Pasta</h4>
               <p>25 minutes</p>
               <p>Difficulty: Easy</p>
-              <p>User: : Foodi273</p>
+              <p>User: Foodi273</p>
               <a href="" class="button">More</a>
               <a href="" class="button">Save Recipe</a>
             </div>
