--- a/savedRecipes.html
+++ b/savedRecipes.html
@@ -34,7 +34,7 @@
               <h4>Chicken Enchilada</h4>
               <p>35 minutes</p>
               <p>Difficulty: Easy</p>
-              <p>User: : OnoFood18</p>
+              <p>User: OnoFood18</p>
               <a href="" class="button">More</a>
               <a href="" class="button">Save Recipe</a>
             </div>
