--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>ShareABite</title>
     <link rel="icon" href="favicon.ico" />
 
-    <!-- Include link to main.css -->
-    <link rel="stylesheet" href="main.css" />
     <!-- Include bootstrap CSS framework -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -16,6 +14,9 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+
+        <!-- Include link to main.css -->
+    <link rel="stylesheet" href="main.css" />
 
   </head>
   <body>
@@ -43,28 +44,32 @@
     </header>
 
     <main>
-      <h1>Welcome to ShareABite</h1>
+      <h1 class="text-center">Welcome to ShareABite</h1>
       <!-- Example of the use of images throughout application -->
-      <img src="logo.png" style="width:150px; height:auto;">
-      <h3>Where recipes bring people together!</h3>
+      <img src="logo.png" style="width:250px; height:auto; border-radius: 25%;">
+      <h3 class="text-center">Where recipes bring people together!</h3>
 
       <!-- Login placeholder, including user name display -->
-      <form method="get" action="play.html">
-        <div>
-          <span>Email</span>
-          <input type="text" placeholder="your@email.com" />
-        </div>
-        <div>
-          <span>Password</span>
-          <input type="password" placeholder="password" />
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
+      <div class="p-3 my-2" style="background-color: #F4EADC; border-radius: 5%; margin: auto; padding: 4rem;">
+        <p class="fw-semibold">Sign in or create an account to get started!</p>
+        <form method="get" action="recipes.html">
+          <div class="input-group mb-3">
+            <span class="input-group-text">Email</span>
+            <input type="email" placeholder="your@email.com" class="form-control"/>
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">Password</span>
+            <input type="password" placeholder="password" class="form-control"/>
+          </div>
+          <div class="d-flex gap-2 justify-content-center">
+            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-outline-secondary">Create</button>
+          </div>
+        </form>
+      </div>
     </main>
 
-    <footer>
-      <hr />
+    <footer class="mt-auto">
       <span class="text-reset">Author - AJ Allred</span>
       <br />
       <a href="https://github.com/AAllred18/startup/tree/main">GitHub</a>
