--- a/recipes.html
+++ b/recipes.html
@@ -8,6 +8,7 @@
 
      <!-- Include link to main.css -->
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="myrecipes.css" />
     <!-- Include bootstrap CSS framework -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
