Adjusted mini navbar for recipes and created card for recipes using bootstrap styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <footer class="mt-auto">
       <span class="text-reset">Author - AJ Allred</span>
       <br />
-      <a href="https://github.com/AAllred18/startup/tree/main">GitHub</a>
+      <a href="https://github.com/AAllred18/startup/tree/main" style="color: white;">GitHub</a>
     </footer>
   </body>
 </html>
