--- a/recipes.html
+++ b/recipes.html
@@ -69,9 +69,11 @@
       <!-- Section to create the recipe list -->
           <!-- This Section is the placeholder for the content stored in the database-->
       <section>
-        <ul>
+        <div class="recipes-container">
           <!-- Example recipe listings -->
            <!-- Want to make a React card component to cleanly dispay recipe info -->
+            <!-- Created styles to have a clean recipe card look -->
+             <!-- Duplicated recipe 8 times to show responsive layout -->
           <div class="card mb-4">
             <img src="ShoyuChicken.jpeg" class="card-img-top">
             <div class="card-body text-center">
@@ -79,6 +81,7 @@
               <p class="card-text mb-1">Prep + Cook: 35 minutes</p>
               <p class="card-text">Difficulty: Easy</p>
               <div class="d-flex justify-content-center gap-3 mt-3">
+                <!-- In the future, icons could be used to signify action -->
                 <a href="viewRecipe.html" class="btn btn-primary">View</a>
                 <a href="" class="btn btn-outline-secondary">Edit</a>
                 <a href="" class="btn btn-outline-secondary">Share</a>
@@ -128,7 +131,63 @@
             </div>
           </div>
 
-        </ul>
+          <div class="card mb-4">
+            <img src="ShoyuChicken.jpeg" class="card-img-top">
+            <div class="card-body text-center">
+              <h4 class="card-title">Shoyu Chicken</h4>
+              <p class="card-text mb-1">Prep + Cook: 35 minutes</p>
+              <p class="card-text">Difficulty: Easy</p>
+              <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="viewRecipe.html" class="btn btn-primary">View</a>
+                <a href="" class="btn btn-outline-secondary">Edit</a>
+                <a href="" class="btn btn-outline-secondary">Share</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-4">
+            <img src="FriedRice.jpeg" class="card-img-top">
+            <div class="card-body text-center">
+              <h4 class="card-title">Fried Rice</h4>
+              <p class="card-text mb-1">Prep + Cook: 20 minutes</p>
+              <p class="card-text">Difficulty: Easy</p>
+              <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="" class="btn btn-primary">View</a>
+                <a href="" class="btn btn-outline-secondary">Edit</a>
+                <a href="" class="btn btn-outline-secondary">Share</a>
+              </div>
+            </div>
+          </div>
+
+           <div class="card mb-4">
+            <img src="ShoyuChicken.jpeg" class="card-img-top">
+            <div class="card-body text-center">
+              <h4 class="card-title">Shoyu Chicken</h4>
+              <p class="card-text mb-1">Prep + Cook: 35 minutes</p>
+              <p class="card-text">Difficulty: Easy</p>
+              <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="viewRecipe.html" class="btn btn-primary">View</a>
+                <a href="" class="btn btn-outline-secondary">Edit</a>
+                <a href="" class="btn btn-outline-secondary">Share</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-4">
+            <img src="FriedRice.jpeg" class="card-img-top">
+            <div class="card-body text-center">
+              <h4 class="card-title">Fried Rice</h4>
+              <p class="card-text mb-1">Prep + Cook: 20 minutes</p>
+              <p class="card-text">Difficulty: Easy</p>
+              <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="" class="btn btn-primary">View</a>
+                <a href="" class="btn btn-outline-secondary">Edit</a>
+                <a href="" class="btn btn-outline-secondary">Share</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </section>
 
     </main>
