--- a/randomRecipe.html
+++ b/randomRecipe.html
@@ -5,38 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShareABite</title>
     <link rel="icon" href="favicon.ico" />
+
+    <!-- Include bootstrap CSS framework -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+
+    <!-- Include link to main.css -->
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <header>
-      <h1>ShareABite<sup>&reg;</sup></h1>
+      <!-- Navigation elements -->
+       <!-- Links between pages as necessary -->
+      <nav class="navbar navbar-expand-md navbar-dark navbar-custom px-4">
+        <a class="navbar-brand fw-semibold" href="index.html">
+          ShareABite<sup>&reg;</sup>
+        </a>
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="recipes.html">My Recipes</a></li>
-          <li><a href="discover.html">Discover</a></li>
-        </menu>
+        <ul class="navbar-nav ms-auto d-flex flex-row gap-2">
+          <li class="nav-item">
+             <a class="nav-link px-3" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3" href="recipes.html">My Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 active" href="discover.html">Discover</a>
+          </li>
+        </ul>
       </nav>
-
-      <hr />
+  
     </header>
 
     <main>
-      <h1>Random Recipe Generator</h1>
+      <h1 class="mt-1">Random Recipe Generator</h1>
+
+      <img src="logo.png" style="width:250px; height:auto; border-radius: 25%;">
 
       <!-- Place holder for 3rd party service API that will randomly return a recipe to the user -->
-      <section>
+      <section class="text-center">
         <p>Discover completely random recipes with our random recipe generator!</p>
-        <button>Random Recipe</button>
+        <div class="align-items-center">
+          <button class="btn btn-primary">Random Recipe</button>
+        </div>
       </section>
 
     </main>
 
-    <footer>
-      <hr />
+    <footer class="mt-auto">
       <span class="text-reset">Author - AJ Allred</span>
       <br />
-      <a href="https://github.com/AAllred18/startup/tree/main">GitHub</a>
+      <a href="https://github.com/AAllred18/startup/tree/main" style="color: white;">GitHub</a>
     </footer>
   </body>
 </html>
