--- a/recipes.html
+++ b/recipes.html
@@ -74,7 +74,7 @@
            <!-- Want to make a React card component to cleanly dispay recipe info -->
             <!-- Created styles to have a clean recipe card look -->
              <!-- Duplicated recipe 8 times to show responsive layout -->
-          <div class="card mb-4">
+          <div class="card recipe-card mb-4 h-100">
             <img src="ShoyuChicken.jpeg" class="card-img-top">
             <div class="card-body text-center">
               <h4 class="card-title">Shoyu Chicken</h4>
@@ -89,7 +89,7 @@
             </div>
           </div>
 
-          <div class="card mb-4">
+          <div class="card recipe-card mb-4 h-100">
             <img src="FriedRice.jpeg" class="card-img-top">
             <div class="card-body text-center">
               <h4 class="card-title">Fried Rice</h4>
