Final touchups to pages and implementing styles

--- a/discover.html
+++ b/discover.html
@@ -17,7 +17,7 @@
 
     <!-- Include link to main.css -->
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="myrecipes.css"/>
+    <link rel="stylesheet" href="recipes.css"/>
   </head>
   <body>
     <header>
