--- a/savedRecipes.html
+++ b/savedRecipes.html
@@ -6,20 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShareABite</title>
     <link rel="icon" href="favicon.ico" />
+
+    <!-- Include bootstrap CSS framework -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+
+    <!-- Include link to main.css -->
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="recipes.css"/>
   </head>
   <body>
     <header>
-      <h1>ShareABite<sup>&reg;</sup></h1>
+      <!-- Navigation elements -->
+       <!-- Links between pages as necessary -->
+      <nav class="navbar navbar-expand-md navbar-dark navbar-custom px-4">
+        <a class="navbar-brand fw-semibold" href="index.html">
+          ShareABite<sup>&reg;</sup>
+        </a>
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="recipes.html">My Recipes</a></li>
-          <li><a href="discover.html">Discover</a></li>
-        </menu>
+        <ul class="navbar-nav ms-auto d-flex flex-row gap-2">
+          <li class="nav-item">
+             <a class="nav-link px-3" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3" href="recipes.html">My Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 active" href="discover.html">Discover</a>
+          </li>
+        </ul>
       </nav>
-
-      <hr />
+  
     </header>
 
     <main>
@@ -27,26 +48,26 @@
 
       <!-- Another location that needs to be connected to the database -->
 
-      <div>
-        <li>
-            <img src="Enchilada.jpeg">
-            <div>
-              <h4>Chicken Enchilada</h4>
-              <p>35 minutes</p>
-              <p>Difficulty: Easy</p>
-              <p>User: OnoFood18</p>
-              <a href="" class="button">More</a>
-              <a href="" class="button">Save Recipe</a>
-            </div>
-          </li>
+      <div class="card recipe-card mb-4 h-100">
+        <img src="Enchilada.jpeg" class="card-img-top">
+        <div class="card-body text-center">
+          <h4 class="card-title">Chicken Enchilada</h4>
+          <p class="card-text mb-1">Prep + Cook: 35 minutes</p>
+          <p class="card-text mb-1">Difficulty: Easy</p>
+          <p class="card-text">User: OnoFood18</p>
+          <div class="d-flex justify-content-center gap-3 mt-3">
+            <!-- In the future, icons could be used to signify action -->
+            <a href="" class="btn btn-primary">View</a>
+          </div>
+        </div>
       </div>
+
     </main>
 
-    <footer>
-      <hr />
+    <footer class="mt-auto">
       <span class="text-reset">Author - AJ Allred</span>
       <br />
-      <a href="https://github.com/AAllred18/startup/tree/main">GitHub</a>
+      <a href="https://github.com/AAllred18/startup/tree/main" style="color: white;">GitHub</a>
     </footer>
   </body>
 </html>
